feat:grid layout

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <p>Place an order for delectable, entirely vegetarian meals and desserts. </p>
             </div>
             <div class="header-right ">
-               <div class="box" style="background-image: url(pro_1.webp);">Sweets</div>
-               <div class="box" style="background-image: url(pro_3.jpg);">Snacks</div>
-               <div class="box" style="background-image: url(pro_2.jpg);">Cake</div>
-               <div class="box" style="background-image: url(pro_4.jpg);">Ice Cream</div>
-               <div class="box" style="background-image: url(pro_5.jpg);">Cake</div>
+               <div class="box" id="box-1" style="background-image: url(pro_1.webp);">Sweets</div>
+               <div class="box" id="box-2" style="background-image: url(pro_3.jpg);">Snacks</div>
+               <div class="box" id="box-3" style="background-image: url(pro_2.jpg);">Cake</div>
+               <div class="box" id="box-4" style="background-image: url(pro_4.jpg);">Ice Cream</div>
+               <div class="box" id="box-5" style="background-image: url(pro_5.jpg);">Dessert</div>
             </div>
         </div>
     </header>
