--- a/index.html
+++ b/index.html
@@ -1,52 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="top-banner">
-        <div class="container">
-            <div class="small-bold-text">Manakamana Sweet and Chat House</div>
-        </div>
+      <div class="container">
+        <div class="small-bold-text">Manakamana Sweet and Chat House</div>
+      </div>
     </div>
     <nav>
-        <div class=" main-nav container flex">
-            <a href="#" class="company-logo"> <img src="logo_project-removebg-preview.png" alt="company-logo"> </a>
+      <div class="main-nav container flex">
+        <a href="#" class="company-logo">
+          <img src="logo_project-removebg-preview.png" alt="company-logo" />
+        </a>
 
-            <div class="nav-link">
-                <ul class="flex">
-                    <li> <a href="#" class="hover-link">Menu</a> </li>
-                    <li> <a href="#" class="hover-link">Offers</a> </li>
-                    <li> <a href="#" class="hover-link">Yummy Deals</a> </li>
-                    <li> <a href="#" class="hover-link secondary-button">Orders</a> </li>
-                    <li> <a href="#" class="hover-link primary-button">Contact Us</a> </li>
-                </ul>
-            </div>
+        <div class="nav-link">
+          <ul class="flex">
+            <li><a href="#" class="hover-link">Menu</a></li>
+            <li><a href="#" class="hover-link">Offers</a></li>
+            <li><a href="#" class="hover-link">Yummy Deals</a></li>
+            <li><a href="#" class="hover-link secondary-button">Orders</a></li>
+            <li>
+              <a href="#" class="hover-link primary-button">Contact Us</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <header>
-        <div class="container flex header-container">
-            <div class="header-left">
-                <h2>The best delicious sweets and snacks</h2>
-                <p>Place an order for delectable, entirely vegetarian meals and desserts. </p>
-            </div>
-            <div class="header-right ">
-               <div class="box" id="box-1" style="background-image: url(pro_1.webp);">Sweets</div>
-               <div class="box" id="box-2" style="background-image: url(pro_3.jpg);">Snacks</div>
-               <div class="box" id="box-3" style="background-image: url(pro_2.jpg);">Cake</div>
-               <div class="box" id="box-4" style="background-image: url(pro_4.jpg);">Ice Cream</div>
-               <div class="box" id="box-5" style="background-image: url(pro_5.jpg);">Dessert</div>
-            </div>
+      <div class="container flex header-container">
+        <div class="header-left">
+          <h2>The best delicious sweets and snacks</h2>
+          <p>
+            Place an order for delectable, entirely vegetarian meals and
+            desserts.
+          </p>
         </div>
+        <div class="header-right">
+          <div class="box" id="box-1" style="background-image: url(pro_1.webp)">
+            Sweets
+          </div>
+          <div class="box" id="box-2" style="background-image: url(pro_3.jpg)">
+            Snacks
+          </div>
+          <div class="box" id="box-3" style="background-image: url(pro_2.jpg)">
+            Cake
+          </div>
+          <div class="box" id="box-4" style="background-image: url(pro_4.jpg)">
+            Ice Cream
+          </div>
+          <div class="box" id="box-5" style="background-image: url(pro_5.jpg)">
+            Dessert
+          </div>
+        </div>
+      </div>
+      <div class="para container">
+        <p>We provide you the best and fresh vegetarian meals.</p>
+      </div>
     </header>
 
-    <script src="https://kit.fontawesome.com/fe5697fb61.js" crossorigin="anonymous"></script>
-</body>
+    <footer class="footer-section">
+      <section class="container">
+        
+        <div class="help-bar">
+          <section>
+            <h3>About Us</h3>
+            <div>
+              <i class="fa-solid fa-phone-volume"></i><span>01 4278667</span>
+            </div>
+            <div>
+              <i class="fa-solid fa-envelope"></i
+              ><span>manakamanasweet@gmail.com</span>
+            </div>
+          </section>
+          
+          <section>
+            <h3>Services</h3>
+            <li>Packing</li>
+            <li>Takeaway</li>
+            <li>Delivery</li>
+          </section>
+          <section>
+            <h3>Contact Us</h3>
+            <li>We want to make the orders as fast as possible.</li>
+          </section>
+          <section>
+            <h3>Helpful Links</h3>
+            <li>Location</li>
+            <li>Mail</li>
+            <li>Pre-orders</li>
+          </section>
+        </div>
+        <hr>
+        <div class="footer-icons">
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-solid fa-phone-volume"></i>
+          <i class="fa-solid fa-location-dot"></i>
+        </div>
+      </section>
+    </footer>
+    <script
+      src="https://kit.fontawesome.com/fe5697fb61.js"
+      crossorigin="anonymous"
+    ></script>
 
+    <div class="spacer" style="height: 100vh"></div>
+  </body>
 </html>
