--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     </footer>
     <script
       src="https://kit.fontawesome.com/fe5697fb61.js"
-      crossorigin="anonymous"
+      crossorigin="anonymous"~
     ></script>
 
-    <div class="spacer" style="height: 100vh"></div>
+    <!-- <div class="spacer" style="height: 100vh"></div> -->
   </body>
 </html>
