--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="media.css">
+    <link rel="icon" href="icon.png">
+    <title>Manakamana Sweets</title>
   </head>
 
   <body>
@@ -26,10 +28,13 @@
             <li><a href="#" class="hover-link">Yummy Deals</a></li>
             <li><a href="#" class="hover-link secondary-button">Orders</a></li>
             <li>
-              <a href="#" class="hover-link primary-button">Contact Us</a>
+              <a href="#" class="hover-link secondary-button">Contact Us</a>
             </li>
           </ul>
         </div>
+        <a href="#" class=" nav-toogle hover-link" >
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
       </div>
     </nav>
 
@@ -41,6 +46,7 @@
             Place an order for delectable, entirely vegetarian meals and
             desserts.
           </p>
+          <a href="#" class="hover-link primary-button cart">Add to cart</a>
         </div>
         <div class="header-right">
           <div class="box" id="box-1" style="background-image: url(pro_1.webp)">
@@ -65,7 +71,7 @@
       </div>
     </header>
 
-    <footer class="footer-section">
+    <footer class="footer-section flex">
       <section class="container">
         
         <div class="help-bar">
